--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^3.0.5",
+    "vue-disqus": "^4.0.1",
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
